src/test/deca/context/valid/protected_deep_subclass.deca
class A {
    protected int x = 1;
}

class B extends A { }


class C extends B {
    int meth() {
        return this.x;  
    }
}

{
    C c = new C();
    println(c.meth());
}
