src/test/deca/context/invalid/protected_subclass_onA.deca

//puisque a est typé A, et pas B on peut pas y accéder

class A {
    protected int x = 1;
}

class B extends A {
    int meth(A a) {
        return a.x;
    }
}

{
}
